compiler/testData/diagnostics/tests/thisAndSuper/thisInToplevelFunction.fir.kt
fun foo1() : Unit {
  <!NO_THIS!>this<!>
  <!UNRESOLVED_LABEL!>this@a<!>
}